Made a start on the blog

--- a/src/DavisSoftware/Views/Pages/Index.cshtml
+++ b/src/DavisSoftware/Views/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = DavisSoftware.Constants.Views.Layouts.Main;
 }
 <div>
     <div class="main-header">
