--- a/src/DavisSoftware/Views/Shared/_Layout.cshtml
+++ b/src/DavisSoftware/Views/Shared/_Layout.cshtml
@@ -17,9 +17,11 @@
     <meta name="msapplication-config" content="~/Content/images/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <!-- todo: use minified versions -->
+    <!--if (HttpContext.Current.IsDebuggingEnabled) -->
     <link rel="stylesheet" href="~/Content/styles/main.css" type="text/css">
-    <link rel="stylesheet" href="~/Content/styles/devices.css" type="text/css">
+    @*<link rel="stylesheet" href="~/Content/styles/devices.css" type="text/css">*@
+    <!-- todo: elseuse minified versions -->
+
 </head>
 
 <body class="grad-main">
