--- a/src/DavisSoftware/Views/Pages/Index.cshtml
+++ b/src/DavisSoftware/Views/Pages/Index.cshtml
@@ -1,46 +1,41 @@
 ﻿@{
     Layout = DavisSoftware.Constants.Views.Layouts.Main;
 }
-<div>
-    <div class="main-header">
-        <h1>Paul Davis</h1>
-        <img src="~/Content/images/PaulDavis.jpg" alt="Paul Davis" />
-        <p>Over 10 years of professional experience, spanning roles in development, customer service and project management.</p>
-    </div>
-</div>
+<section class="hero-banner">
+    <h1>Paul Davis</h1>
+    <img src="~/Content/images/PaulDavis.jpg" alt="Paul Davis" />
+    <p>Over 10 years of professional experience, spanning roles in development, customer service and project management.</p>
+</section>
 
-<div>
-    Personal Web Site Projects (see
-    <a href="https://github.com/pdavis86">GitHub</a>)
+<section>
+    <h2>Freelance Web Site Projects (see <a href="https://github.com/pdavis86">GitHub</a>)</h2>
     <ul>
         <li>2015-01 Total-Interior.co.uk</li>
         <li>2009-07 PicklesPlayCare.co.uk</li>
         <li>2004-09 BrewersFurniture.co.uk</li>
         <li>2003-01 OakInteriors.co.uk</li>
     </ul>
-</div>
+</section>
 
-<div>
-    Examples of closed-source work
+<section>
+    <h2>Examples of closed-source work</h2>
     <ul>
+        <li>Various EpiServer CMS managed web sites</li>
         <li>Various Umbraco CMS managed web sites</li>
         <li>Web Api projects</li>
-        <li>
-            An entirely bespoke database infrastructure to support the
-            <a href="https://www.prospectsoft.com/">Prospect 365</a> platform
-        </li>
+        <li>An entirely bespoke database infrastructure to support the <a href="https://www.prospectsoft.com/">Prospect 365</a> platform</li>
         <li>Bespoke .Net WinForms software</li>
         <li>SQL query writing and optimisation</li>
         <li>MS Office integration debugging apps</li>
         <li>Exchequer COM Toolkit usage debugging apps</li>
     </ul>
-</div>
+</section>
 
-<div class="u-center">
+<section class="u-center">
     <a href="https://github.com/pdavis86">
         <img src="images/GitHub-Mark-64px.png" alt="" />
     </a>
     <a href="https://www.linkedin.com/in/paulricharddavis">
         <img src="images/In-Black-66px-R.png" alt="" />
     </a>
-</div>
+</section>
