--- a/src/DavisSoftware/SCSS/main.scss
+++ b/src/DavisSoftware/SCSS/main.scss
@@ -3,3 +3,8 @@
 @import 'Base/base';
 @import 'Base/layout';
 @import 'Base/theme';
+
+@import "Organisms/header";
+@import "Organisms/navigation";
+@import "Organisms/hero-banner";
+@import "Organisms/footer";
