--- a/src/DavisSoftware/Views/Pages/Index.cshtml
+++ b/src/DavisSoftware/Views/Pages/Index.cshtml
@@ -8,7 +8,8 @@
 </section>
 
 <section>
-    <h2>Freelance Web Site Projects (see <a href="https://github.com/pdavis86">GitHub</a>)</h2>
+    <h2>Freelance Web Site Projects</h2>
+    <p>The source code for these can be found on <a href="https://github.com/pdavis86" target="_blank">GitHub</a></p>
     <ul>
         <li>2015-01 Total-Interior.co.uk</li>
         <li>2009-07 PicklesPlayCare.co.uk</li>
@@ -23,7 +24,7 @@
         <li>Various EpiServer CMS managed web sites</li>
         <li>Various Umbraco CMS managed web sites</li>
         <li>Web Api projects</li>
-        <li>An entirely bespoke database infrastructure to support the <a href="https://www.prospectsoft.com/">Prospect 365</a> platform</li>
+        <li>An entirely bespoke database infrastructure to support the <a href="https://www.prospectsoft.com/" target="_blank">Prospect 365</a> platform</li>
         <li>Bespoke .Net WinForms software</li>
         <li>SQL query writing and optimisation</li>
         <li>MS Office integration debugging apps</li>
@@ -31,11 +32,9 @@
     </ul>
 </section>
 
-<section class="u-center">
-    <a href="https://github.com/pdavis86">
-        <img src="images/GitHub-Mark-64px.png" alt="" />
-    </a>
-    <a href="https://www.linkedin.com/in/paulricharddavis">
-        <img src="images/In-Black-66px-R.png" alt="" />
-    </a>
-</section>
+@*<section>
+    <h2>Personal Development</h2>
+    @Html.Partial(DavisSoftware.Constants.Views.Partials.Molecules.ProgressBar, new DavisSoftware.Models.ProgressBarModel("Climbing", 20))
+    @Html.Partial(DavisSoftware.Constants.Views.Partials.Molecules.ProgressBar, new DavisSoftware.Models.ProgressBarModel("Running", 30))
+    @Html.Partial(DavisSoftware.Constants.Views.Partials.Molecules.ProgressBar, new DavisSoftware.Models.ProgressBarModel("Ice Skating", 40))
+</section>*@
