--- a/src/DavisSoftware/Views/Shared/_Layout.cshtml
+++ b/src/DavisSoftware/Views/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
 </head>
 
 <body class="grad-main">
-    @Html.Partial(DavisSoftware.Constants.Views.Partials.Header)
+    @Html.Partial(DavisSoftware.Constants.Views.Partials.Organisms.Header)
 
     <main class="content-wrapper">
         @RenderBody()
     </main>
 
-    @Html.Partial(DavisSoftware.Constants.Views.Partials.Footer)
+    @Html.Partial(DavisSoftware.Constants.Views.Partials.Organisms.Footer)
 </body>
 
 </html>
