--- a/src/DavisSoftware/SCSS/Organisms/_navigation.scss
+++ b/src/DavisSoftware/SCSS/Organisms/_navigation.scss
@@ -1,3 +1,12 @@
-.global-navigation {
+.site-navigation {
+    margin-left: auto;
 
+    li {
+        display: inline-block;
+        padding: 8px;
+    }
+
+    a {
+        text-decoration: none;
+    }
 }
