--- a/src/DavisSoftware/Views/Pages/Index.cshtml
+++ b/src/DavisSoftware/Views/Pages/Index.cshtml
@@ -2,7 +2,6 @@
     Layout = DavisSoftware.Constants.Views.Layouts.Main;
 }
 <section class="hero-banner">
-    <h1>Paul Davis</h1>
     <img src="~/Content/images/PaulDavis.jpg" alt="Paul Davis" />
     <p>Over 10 years of professional experience, spanning roles in development, customer service and project management.</p>
 </section>
@@ -30,6 +29,14 @@
         <li>MS Office integration debugging apps</li>
         <li>Exchequer COM Toolkit usage debugging apps</li>
     </ul>
+
+    @*<form method="post" action="/" class="btn-group">
+        <button type="submit" class="btn">Button 1</button>
+        <input type="button" class="btn" value="Button 2 (does nothing)" />
+        <input type="submit" class="btn" value="Button 3" />
+        <a href="#" class="btn">Button 4</a>
+    </form>*@
+
 </section>
 
 @*<section>
