--- a/src/DavisSoftware/Views/Shared/Organisms/_Header.cshtml
+++ b/src/DavisSoftware/Views/Shared/Organisms/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<header class="global-header">
-    <h1>Site Title</h1>
+﻿<header class="site-header">
+    <h1>Paul Davis</h1>
     @Html.Partial(DavisSoftware.Constants.Views.Partials.Organisms.Navigation)
 </header>
